Limits with query enpoint implementation